2008-08-14  Daniel Steffen  <das@users.sourceforge.net>

	* tests/msgcat.test:		fix for ::tcl::mac::locale with
					@modifier (HEAD backport 2008-06-01).

	* tests/fCmd.test (fCmd-6.23):	made result matching robust when test
					workdir and /tmp are not on same FS.

	* unix/Makefile.in:		ensure Makefile shell is /bin/bash for
	* unix/configure.in (SunOS):	DTrace-enabled build on Solaris.
					(followup to 2008-06-12) [Bug 2016584]

	* unix/tcl.m4 (SC_PATH_X):	check for libX11.dylib in addition to
					libX11.so et al.

	* unix/configure: 		autoconf-2.59

2008-08-13  Don Porter  <dgp@users.sourceforge.net>

	* generic/tclFileName.c:        Fix for errors handling -types {}
	* tests/fileName.test:          option to [glob]. [Bug 1750300]
	Thanks to Matthias Kraft and George Peter Staplin.

2008-08-12  Don Porter  <dgp@users.sourceforge.net>

	*** 8.5.4 TAGGED FOR RELEASE ***

	* changes:	Update for 8.5.4 release.

2008-08-11  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* library/http/http.tcl: Remove 8.5 requirement.
	* library/http/pkgIndex.tcl:
	* unix/Makefile.in:
	* win/Makefile.in:
	* win/makefile.vc:

2008-08-11  Andreas Kupries  <andreask@activestate.com>

	* library/tm.tcl: Added a 'package provide' command to the
	generated ifneeded scripts of Tcl Modules, for early detection of
	conflicts between the version specified through the file name and
	a 'provide' command in the module implementation, if any. Note
	that this change also now allows Tcl Modules to not provide a
	'provide' command at all, and declaring their version only through
	their filename.

	* generic/tclProc.c (Tcl_ProcObjCmd): Fixed memory leak triggered
	* tests/proc.test: by procbody::test::proc. See [Bug 2043636].
	Added a test case demonstrating the leak before the fix. Fixed a
	few spelling errors in test descriptions as well.

2008-08-11  Don Porter  <dgp@users.sourceforge.net>

	* library/http/http.tcl:	Bump http version to 2.7.1 to account