@@ -6879,6 +6879,9 @@ TclDTraceInfo(
 	}
     }
 }
+
+TCL_DTRACE_DEBUG_LOG();
+
 #endif /* USE_DTRACE */
 
 /*
